# PulseInvest

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: alembic.ini  main.py  pyproject.toml  requirements.txt
backend/api/: admin.py  auth.py  briefing.py  chat.py  market.py  portfolio.py
backend/db/: database.py  models.py
backend/db/migrations/: env.py
backend/migrations/: env.py
backend/models/: chat.py  portfolio.py
backend/services/: agent.py  auth.py  coingecko.py  news.py  yahoo_finance.py
frontend/: app.py  pyproject.toml
frontend/auth/: login.py  session.py
frontend/pages/: 01_dashboard.py  02_research.py  03_chat.py  04_briefing.py  05_admin.py
