[project]
name = "pulse-invest-frontend"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "streamlit",
    "requests",
    "plotly",
    "pandas",
    "python-dotenv",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
